# singer-plugin-starter-template

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
tap-pokeapi/: README.md  meltano.yml  pyproject.toml  tap-pokeapi.sh  tox.ini
tap-pokeapi/tap_pokeapi/: auth.py  client.py  streams.py  tap.py
tap-pokeapi/tap_pokeapi/tests/: __init__.py  test_core.py
